# codeblocks_stm32_wizard

./: README.md  processor_info.sq  wizard.script
stm32/: Makefile  Makefile.am  Makefile.in  dump_variable.sq  optional_software.sq  stm32.fbp  wizard.script  wizard.xrc
stm32/templates/default/c/: main.c  syscalls.c  syshandlers.c
stm32/templates/default/h/: configuration.h
stm32/templates/default/ld/: target.ld
templates/default/h/: main.h
