pkgdatadir = $(datadir)/@PACKAGE@/templates/wizard/stm32

dist_pkgdata_DATA = logo.png \
                    wizard.png \
                    wizard.script \
		    wizard.xrc \
		    optional_software.sq \
		    processor_info.sq \
		    dump_variable.sq

cdatadir          = $(pkgdatadir)/templates/default/c
dist_cdata_DATA   = templates/default/c/main.c \
		    templates/default/c/syscalls.c \
		    templates/default/c/syshandlers.c

lddatadir         = $(pkgdatadir)/templates/default/ld
dist_lddata_DATA  = templates/default/ld/target.ld

hdatadir          = $(pkgdatadir)/templates/default/h
dist_hdata_DATA   = templates/default/h/main.h \
		    templates/default/h/configuration.h

